--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ authors = ["Your Name <you@example.com>"]
 [tool.poetry.dependencies]
 python = "^3.8"
 Django = "^3.1.7"
+django-crispy-forms = "^1.11.1"
 
 [tool.poetry.dev-dependencies]
 
