--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ authors = ["Your Name <you@example.com>"]
 python = "^3.8"
 Django = "^3.1.7"
 django-crispy-forms = "^1.11.1"
+gunicorn = "^20.0.4"
 
 [tool.poetry.dev-dependencies]
 pylint = "^2.7.2"
