--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ Django = "^3.1.7"
 django-crispy-forms = "^1.11.1"
 gunicorn = "^20.0.4"
 frozendict = "^1.2"
+faker = "^6.6.1"
 
 [tool.poetry.dev-dependencies]
 pylint = "^2.7.2"
