--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ django-crispy-forms = "^1.11.1"
 gunicorn = "^20.0.4"
 frozendict = "^1.2"
 faker = "^6.6.1"
+django-reversion = "^3.0.9"
 
 [tool.poetry.dev-dependencies]
 pylint = "^2.7.2"
